--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -1,3 +1,57 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  /* Text */
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: medium;
+  font-weight: bold;
+
+  /* Sizing */
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+
+  /* Styling */
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+
+  /* Background */
+  background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url("/public/heroImage.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center 25%;
+  background-attachment: fixed; /* Keep the background fixed in place */
+}
+
+/* Update background image sizing if viewed on mobile */
+@media (max-width < 600px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-image: url("/public/heroImage.webp");
+    /* make background image fit width of phone */
+    background-size: cover;
+    background-position: center, center;
+  }
+}
+
+@media (max-width: 600px) {
+  body {
+    width: 100%;
+    height: 100%;
+    background-image: url("/public/heroImage.webp");
+    /* make background image fit width of phone */
+    background-size: cover;
+    background-position: center, center;
+  }
+}
