--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -9,8 +9,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: medium;
-  font-weight: bold;
+  /* font-size: medium; */
+  /* font-weight: bold; */
 
   /* Sizing */
   width: 100%;
@@ -26,20 +26,27 @@ body {
 
   /* Background */
   background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
-    url("/public/heroImage.webp");
+    url("/heroImage.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center 25%;
   background-attachment: fixed; /* Keep the background fixed in place */
 }
 
+.container {
+  background-color: white;
+  font-family: "Roboto", sans-serif;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 3%;
+  text-align: center;
+}
 /* Update background image sizing if viewed on mobile */
-@media (max-width < 600px) {
+/* @media (max-width < 600px) {
   body {
     width: 100%;
     height: 100%;
-    background-image: url("/public/heroImage.webp");
-    /* make background image fit width of phone */
+    background-image: url("/heroImage.webp");
     background-size: cover;
     background-position: center, center;
   }
@@ -49,9 +56,8 @@ body {
   body {
     width: 100%;
     height: 100%;
-    background-image: url("/public/heroImage.webp");
-    /* make background image fit width of phone */
+    background-image: url("/heroImage.webp");
     background-size: cover;
-    background-position: center, center;
+    background-position: center, 25%;
   }
-}
+} */
