--- a/assets/styles/qualifyWebpage.css
+++ b/assets/styles/qualifyWebpage.css
@@ -4,4 +4,29 @@
   margin: 10px;
   padding: 10px;
   border-radius: 3%;
+  text-align: center;
+}
+
+.container .container {
+  /* background-color: #f1f1f1; */
+  width: 98%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 3%;
+  text-align: center;
+}
+
+p {
+  width: 98%;
+  margin: 10px;
+  text-align: center;
+}
+
+form {
+  background-color: #f1f1f1;
+  width: 98%;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 3%;
+  text-align: center;
 }
