--- a/assets/styles/globals.css
+++ b/assets/styles/globals.css
@@ -9,18 +9,16 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* font-size: medium; */
-  /* font-weight: bold; */
 
   /* Sizing */
-  width: 100%;
+  /* width: 100%;
   height: 100%;
   margin: 0;
-  padding: 0;
+  padding: 0; */
 
   /* Styling */
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: center; */
   text-align: center;
   align-items: center;
 
@@ -33,14 +31,6 @@ body {
   background-attachment: fixed; /* Keep the background fixed in place */
 }
 
-.container {
-  background-color: white;
-  font-family: "Roboto", sans-serif;
-  margin: 10px;
-  padding: 10px;
-  border-radius: 3%;
-  text-align: center;
-}
 /* Update background image sizing if viewed on mobile */
 /* @media (max-width < 600px) {
   body {
