--- a/assets/styles/qualifyWebpage.css
+++ b/assets/styles/qualifyWebpage.css
@@ -1,7 +1,7 @@
 .container {
   background-color: white;
   font-family: "Roboto", sans-serif;
-  margin: 10px;
+  margin: auto;
   padding: 10px;
   border-radius: 3%;
   text-align: center;
